--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_pin_code_fields: ^2.2.0
   pin_code_fields: ^8.0.1
+  file_picker: ^5.3.2
+  webview_flutter: ^4.2.2
+  
   
 
 flutter_native_splash:
