--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   pin_code_fields: ^8.0.1
   file_picker: ^5.3.2
   webview_flutter: ^4.2.2
+  dio: ^5.2.1+1
+  flutter_easyloading: ^3.0.5
+  provider: ^6.0.5
+  connectivity_plus: ^4.0.1
   
   
 
